tp-blog-main/infra/k8s/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 3  # Vous pouvez ajuster le nombre de réplicas selon vos besoins
  selector:
    matchLabels:
      app: posts-pod
  template:
    metadata:
      labels:
        app: posts-pod
    spec:
      containers:
        - name: posts-container
          image: leonelmaken/posts-service:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: ClusterIP
  selector:
    app: posts-pod
  ports:
    - port: 4000
      targetPort: 4000
