tp-blog-main/infra/k8s/posts-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service-lb
spec:
  selector:
    app: posts-pod  # Assurez-vous que le label du sélecteur correspond à celui de votre pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000  # Port du conteneur dans le pod
  type: LoadBalancer
