tp-blog-main/infra/k8s/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts-pod  # Utilisez le label du pod que vous souhaitez exposer
  ports:
    - port: 4000  # Port du service ClusterIP
      targetPort: 4000  # Port du conteneur dans le pod
  type: ClusterIP
