tp-blog-main/infra/k8s/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: your-hostname.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 4002
          - path: /posts.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: comments-service
                port:
                  number: 4001
          - path: /.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-service
                port:
                  number: 3000
